k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-em-prod
  labels:
    name: app-em-prod
