k8s/prod/em-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-api
  namespace: app-em-prod
  labels:
    app: employee-management
    component: api
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-management
      component: api
      tier: backend
  template:
    metadata:
      labels:
        app: employee-management
        component: api
        tier: backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: spring-boot-api
          image: ghcr.io/hiddenstar1000/employee-management-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1.5Gi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-api-service
  namespace: app-em-prod
  labels:
    app: employee-management
    component: api
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: employee-management
    component: api
    tier: backend
  ports:
    - name: http
      port: 8080
      targetPort: http
